# Convo

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md
backend/: .env.example  .pre-commit-config.yaml  DEVELOPMENT.md  README.md  db.sqlite3  pyproject.toml
backend/apps/authentication/: apps.py  backends.py  middleware.py  urls.py  utils.py
backend/apps/authentication/api/serializers/: auth.py  authentication.py
backend/apps/authentication/api/views/: auth.py  authentication.py
backend/apps/authentication/tests/: test_api.py
backend/apps/conversations/: admin.py  consumers.py  pagination.py  permissions.py  routing.py  urls.py  utils.py
backend/apps/conversations/api/views/: message.py  (+1 more)
backend/apps/conversations/migrations/: 0001_initial.py  0003_alter_conversation_options_alter_message_options_and_more.py  0003_message_deleted_at_message_prev_content.py  0004_alter_message_content.py
backend/apps/conversations/models/: conversation.py  message.py  participant.py
backend/apps/conversations/services/: conversation_service.py  message_service.py
backend/apps/conversations/tests/: test_websockets.py
backend/apps/users/: admin.py  pagination.py  urls.py
backend/apps/users/api/: permissions.py
backend/apps/users/migrations/: 0001_initial.py  0002_alter_user_email.py
backend/apps/users/models/: user.py
backend/apps/users/tests/: test_api.py
backend/auth/: serializers.py  tests.py  urls.py  utils.py  views.py
backend/config/: asgi.py  settings.py  urls.py  wsgi.py
backend/conversations/: permissions.py  urls.py
backend/conversations/api/serializers/: conversation.py  message.py
backend/conversations/api/views/: conversation.py  message.py
backend/conversations/migrations/: 0001_initial.py  0002_conversation_conversation_key.py
backend/conversations/models/: __init__.py  conversation.py  message.py  participant.py
backend/conversations/services/: conversation_service.py  message_service.py
backend/settings/: __init__.py  base.py  local.py  production.py  test.py
backend/translations/: en.json
backend/users/: serializers.py  tests.py  translations.py  urls.py  views.py
backend/users/management/commands/: setup_admin.py
backend/users/translations/: en.json
backend/utils/: __init__.py  translations.py
(+28 files in other folders)
