[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "channels-redis>=4.3.0",
    "channels[daphne]>=4.3.2",
    "django>=6.0.4",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.13.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
]

[dependency-groups]
dev = [
    "django-silk>=5.5.0",
    "pre-commit>=4.6.0",
    "python-semantic-release>=10.5.3",
    "ruff>=0.15.12",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # import sorting
    "B",   # bugbear (real bugs + bad patterns)
    "UP",  # pyupgrade (modern Python syntax)
    "DJ",  # django-specific rules
    "S",   # security   
]
fixable = ["ALL"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
split-on-trailing-comma = true

[tool.ruff.lint.per-file-ignores]
"**/tests.py" = ["S105", "S106"]
"**/test*.py" = ["S105", "S106"]
"**/settings/*.py" = ["F403", "E501"]
"**/migrations/*.py" = ["E501"]

[tool.semantic_release]
version_toml = [
    "pyproject.toml:project.version",
]
upload_to_vcs_release = true
build_command = ""
commit_message = "chore(release): backend {version} [skip ci]"
tag_format = "backend-v{version}"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "build", "chore", "ci", "docs", "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

